--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-icons": "^3.0.0",
+    "@types/styled-components": "^5.1.25",
+    "axios": "^0.27.2",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.3.1",
+    "styled-components": "^5.3.5",
+    "swiper": "^8.1.6"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
