--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/react-icons": "^3.0.0",
-    "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "next": "12.1.6",
+    "nprogress": "^0.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
@@ -20,6 +19,9 @@
     "swiper": "^8.1.6"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
+    "@types/react-icons": "^3.0.0",
+    "@types/styled-components": "^5.1.25",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
