--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
+    "react-is": "^18.1.0",
     "styled-components": "^5.3.5",
     "swiper": "^8.1.6"
   },
   "devDependencies": {
-    "@types/nprogress": "^0.2.0",
-    "@types/react-icons": "^3.0.0",
-    "@types/styled-components": "^5.1.25",
     "@types/node": "17.0.35",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
+    "@types/react-icons": "^3.0.0",
+    "@types/styled-components": "^5.1.25",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.7.2"
