--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
     "react-is": "^18.1.0",
+    "react-toastify": "^9.0.1",
     "styled-components": "^5.3.5",
     "swiper": "^8.1.6"
   },
